[gd_scene load_steps=2 format=3 uid="uid://stage_clear_001"]

[ext_resource type="Script" path="res://scripts/ui/stage_clear_overlay.gd" id="1_stage_clear"]

[node name="StageClearOverlay" type="CanvasLayer"]
layer = 10
script = ExtResource("1_stage_clear")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "STAGE CLEARED"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Time: 45.32 / 60.00"
horizontal_alignment = 1

[node name="PotLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Pot: $800"
horizontal_alignment = 1

[node name="NextPotLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Next Stage Pot: $2,000"
horizontal_alignment = 1
modulate = Color(0.8, 0.8, 0.3, 1)

[node name="WarningLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Failing loses the Pot!"
horizontal_alignment = 1
modulate = Color(1, 0.4, 0.4, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="CashOutButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CASH OUT"

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CONTINUE"
